--- a/css/index.css
+++ b/css/index.css
@@ -11,8 +11,8 @@ body {
 }
 
 .heading h2 {
-    font-size: 40px;
-    color: #91C8E4;
+    font-size: 48px;
+    color: #4d73ff;
     font-weight: bold;
     letter-spacing: 0.5px;
 }
@@ -112,7 +112,7 @@ body {
 }
 
 #navbarInstruction .nav-link {
-    font-size: 14px;
+    font-size: 16px;
     font-weight: bold;
     letter-spacing: 1px;
     transition: all 0.5s;
@@ -167,7 +167,7 @@ body {
 }
 
 #carouselCyber .carousel-caption h1 {
-    font-size: 52px;
+    font-size: 84px;
 }
 
 #carouselCyber .carousel-caption p {
@@ -190,8 +190,9 @@ body {
 }
 
 #carouselCyber .carousel-caption button:hover {
-    background-color: #ff4f81;
-    border-color: #ff4f81;
+    background-color: #fffF;
+    color: #0cbcfb;
+    border-color: #fffF;
 }
 
 #carouselCyber .carousel-control-next,
@@ -206,10 +207,10 @@ body {
     width: 80%;
     margin: 0 auto;
     text-align: center;
-    font-size: 15px;
+    font-size: 20px;
     /* 1em = 15px */
     line-height: 1.8em;
-    color: #999;
+    color: #381313;
     letter-spacing: 1px;
     padding: 1rem 0 5rem;
 }
@@ -219,7 +220,7 @@ body {
 }
 
 .welcome__item h3 {
-    color: #ff4f81;
+    color: #4d73ff;
     font-weight: bold;
     font-size: 1.8rem;
     margin: 1rem 0;
@@ -248,8 +249,23 @@ body {
 /* TEAM */
 
 .team {
-    background-color: #4e2a84;
+    background-image: url("../img/BR-TEAM.png");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
     padding: 70px 0;
+}
+
+.team .heading p::after {
+    content: '';
+    width: 70px;
+    height: 2px;
+    background-color: white;
+    display: block;
+    margin: 20px auto;
+}
+
+.team h2 {
+    color: #ffff;
 }
 
 .team__content {
@@ -282,11 +298,11 @@ body {
     position: absolute;
     bottom: 0;
     left: 0;
-    background-color: #ff0e83;
+    background-color: #0cbcfb;
     color: white;
     width: 100%;
     padding: 30px;
-    opacity: 1;
+    opacity: 0.9;
     transition: all .5s;
 }
 
@@ -312,7 +328,7 @@ body {
 }
 
 .team__details h3 {
-    color: #ff0e83;
+    color: #0cbcfb;
 }
 
 .team__text {
@@ -333,8 +349,8 @@ body {
 }
 
 .team_socials i:hover {
-    color: #ff0e83;
-    border-color: #ff0e83;
+    color: #0cbcfb;
+    border-color: #0cbcfb;
 }
 
 .team__item2 {
@@ -399,6 +415,15 @@ body {
     background-size: cover;
 }
 
+.ourStats .heading p::after {
+    content: '';
+    width: 70px;
+    height: 2px;
+    background-color: white;
+    display: block;
+    margin: 20px auto;
+}
+
 .ourStats__content {
     text-align: center;
     color: white;
@@ -413,11 +438,19 @@ body {
     letter-spacing: 3px;
     font-weight: bold;
     margin: 30px 0 20px;
-    color: #ff4f81
+    color: #4d73ff;
+}
+
+.ourStats__item sup {
+    font-size: 2rem;
+    top: -30px;
+    left: 5px;
+    letter-spacing: 2px;
+    font-weight: 300;
 }
 
 .ourStats__item p {
-    font-size: 3rem;
+    font-size: 4rem;
     letter-spacing: 2px;
     font-weight: 300;
 }
@@ -438,11 +471,11 @@ body {
 }
 
 .offer__item:hover {
-    background-color: #12ccc3;
+    background-color: #0cbcfb;
 }
 
 .offer__item i {
-    color: #ff4f81;
+    color: #4d73ff;
     font-size: 40px;
 }
 
@@ -467,6 +500,15 @@ body {
     background: url(../img/banner3.jpg) center;
     background-attachment: fixed;
     background-size: cover;
+}
+
+.feedback .heading p::after {
+    content: '';
+    width: 70px;
+    height: 2px;
+    background-color: white;
+    display: block;
+    margin: 20px auto;
 }
 
 .feedback__content {
@@ -511,7 +553,7 @@ body {
 
 .feedback__name p {
     margin: 0;
-    color: #ff4f81;
+    color: #4d73ff;
 }
 
 .feedback__name {
@@ -525,7 +567,7 @@ body {
 }
 
 .feedback__content .owl-theme .owl-dots .owl-dot span {
-    background-color: #ff4f81;
+    background-color: #4d73ff;
     opacity: 0.5;
 }
 
@@ -558,14 +600,14 @@ body {
 }
 
 .news__content a:hover {
-    color: #ff4f81;
+    color: #4d73ff;
 }
 
 .news__content h4 {
     font-size: 1rem;
     font-weight: bold;
     letter-spacing: 1px;
-    color: #ff4f81;
+    color: #4d73ff;
     margin: 1rem 0;
 }
 
@@ -840,99 +882,6 @@ footer {
 
 
 /* Base styles for .team section */
-
-.team {
-    background-color: #4e2a84;
-    padding: 70px 0;
-}
-
-.team__content {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    width: 75%;
-    margin: 0 auto;
-    gap: 25px 30px;
-}
-
-.team__item img {
-    width: 100%;
-    display: block;
-}
-
-.team__item {
-    position: relative;
-}
-
-.team__item h3 {
-    font-size: 1.3rem;
-}
-
-.team__item p {
-    font-size: 0.875rem;
-    line-height: 28px;
-}
-
-.team__title {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background-color: #ff0e83;
-    color: white;
-    width: 100%;
-    padding: 30px;
-    opacity: 1;
-    transition: all 0.5s;
-}
-
-.team__details {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-    color: white;
-    padding: 100px 40px;
-    opacity: 0;
-    transition: all 0.5s;
-}
-
-.team__item:hover .team__title {
-    opacity: 0;
-}
-
-.team__item:hover .team__details {
-    opacity: 1;
-}
-
-.team__details h3 {
-    color: #ff0e83;
-}
-
-.team__text {
-    margin: 8px 0;
-}
-
-.team_socials {
-    margin-top: 24px;
-}
-
-.team_socials i {
-    width: 37px;
-    height: 37px;
-    border: 1.5px solid rgba(255, 255, 255, 0.5);
-    text-align: center;
-    line-height: 37px;
-    transition: all 0.5s;
-}
-
-.team_socials i:hover {
-    color: #ff0e83;
-    border-color: #ff0e83;
-}
-
-
-/* Responsive Styles */
 
 
 /* For screens with a maximum width of 1024px (tablets and smaller) */
